--- a/Evro.mw
+++ b/Evro.mw
@@ -36,7 +36,7 @@ Kahtenz' valüt mail'mas levigandusen mödhe [[AÜV:oiden dollar]]an jäl'ghe, e
 
 == Evron nimed ==
 * ''[[Venäkel']] — '''Евро'''''
-* [[Anglijan kel'|Anglijan]], [[slovakijan kel'|slovakijan]], [[saksan kel'|saksan]], [[francijan kel'|francijan]] i [[estin kel'|estin]] kelil — '''Euro'''
+* [[Alaman kel'|Alaman]], [[anglijan kel'|anglijan]], [[estin kel'|estin]], [[francijan kel'|francijan]], [[ispanijan kel'|ispanijan]], [[portugalijan kel'|portugalijan]], [[saksan kel'|saksan]], [[slovakan kel'|slovakan]] i [[suomen kel'|suomen]] kelil — '''Euro'''
 * [[Mal'tan kel'|Mal'tan]] — '''Ewro'''
 * [[Grekan kel'|Grekan]] — '''Ευρώ'''
 * [[Irlandijan kel'|Irlandijan]] — '''Eoró'''
