--- a/Evro.mw
+++ b/Evro.mw
@@ -36,10 +36,12 @@ Kahtenz' valüt mail'mas levigandusen mödhe [[AÜV:oiden dollar]]an jäl'ghe, e
 
 == Evron nimed ==
 * ''[[Venäkel']] — '''Евро'''''
-* [[Alaman kel'|Alaman]], [[anglijan kel'|anglijan]], [[estin kel'|estin]], [[francijan kel'|francijan]], [[ispanijan kel'|ispanijan]], [[portugalijan kel'|portugalijan]], [[saksan kel'|saksan]], [[slovakan kel'|slovakan]] i [[suomen kel'|suomen]] kelil — '''Euro'''
-* [[Mal'tan kel'|Mal'tan]] — '''Ewro'''
+* [[Alaman kel'|Alaman]], [[anglijan kel'|anglijan]], [[estin kel'|estin]], [[francijan kel'|francijan]], [[ispanijan kel'|ispanijan]], [[italijan kel'|italijan]], [[portugalijan kel'|portugalijan]], [[saksan kel'|saksan]], [[slovakan kel'|slovakan]] i [[suomen kel'|suomen]] kelil — '''Euro'''
 * [[Grekan kel'|Grekan]] — '''Ευρώ'''
 * [[Irlandijan kel'|Irlandijan]] — '''Eoró'''
+* [[Latvijan kel'|Latvijan]] — '''Eiro'''
+* [[Litvan kel'|Litvan]] — '''Euras'''
+* [[Mal'tan kel'|Mal'tan]] — '''Ewro'''
 * [[Slovenijan kel'|Slovenijan]] — '''Evro'''
 
 == Irdkosketused ==
