--- a/Evro.mw
+++ b/Evro.mw
@@ -11,22 +11,24 @@ Kahtenz' valüt mail'mas levigandusen mödhe [[AÜV:oiden dollar]]an jäl'ghe, e
 # {{NLD}}
 # {{AUT}}
 # {{BEL}}
-# {{EST}}
+# {{EST}} (vspäi 2011)
 # {{FRA}}
 # {{DEU}}
 # {{GRC}}
 # {{IRL}}
 # {{ESP}}
 # {{ITA}}
-# {{CYP}}
-# {{LVA}}
-# {{LTU}}
+# {{CYP}} (vspäi 2008)
+# {{LVA}} (vspäi 2014)
+# {{LTU}} (vspäi 2015)
 # {{LUX}}
-# {{MLT}}
+# {{MLT}} (vspäi 2008)
 # {{PRT}}
-# {{SVK}}
-# {{SVN}}
+# {{SVK}} (vspäi 2009)
+# {{SVN}} (vspäi 2007)
 # {{FIN}}
+
+[[Horvatii]] planiruib kävutada evrod üks'jäižeks valütaks vspäi 2023, [[Bolgarii]] i [[Romanii]] — vspäi 2024.
 
 === Ühtnemižeta EÜ:s ===
 # [[Fail:Flag of Andorra.svg|25px]] [[Andorr]]
