--- a/Lamborghini_Egoista.mw
+++ b/Lamborghini_Egoista.mw
@@ -1,10 +1,13 @@
-[[Fail:Lamborghini Egoista right.jpg|thumb|right|250px|«Lamborghini Egoista» — oiktan polen nägu.]]
-'''«Lamborghini Egoista»''' om [[Italii|italijalaižen]] «[[Lamborghini]]»-kompanijan [[konceptavto|koncept]]/[[sportavto]] [[kupe (klass)|kupe]]-klassas.
+[[Fail:Lamborghini Egoista right.jpg|thumb|right|250px|«Lamborghini Egoista» — oiktan polen nägu]]
+'''«Lamborghini Egoista»''' om [[Italii|italižen]] «[[Lamborghini]]»-kompanijan [[konceptavto|koncept]]/[[sportavto]] [[kupe (klass)|kupe]]-klassas, superkar.
 
-Projekt om ezitadud vl 2013<ref>[http://www.automoblog.net/2013/05/12/lamborghini-egoista/ Lamborghini Feeds Their Ego with the Egoista Concept / ''12. semendku 2013. Automoblog.net''.] {{ref-en}}</ref>. Üks'jäine egzemplär om pästtud vl 2014.
+Projekt om ezitadud vl 2013<ref>[http://www.automoblog.net/2013/05/12/lamborghini-egoista/ Lamborghini Feeds Their Ego with the Egoista Concept / ''12. semendku 2013. Automoblog.net''.] {{ref-en}}</ref>. Üks'jäine egzemplär om pästtud vl 2014. Dizainer — Val'ter de Sil'va.
 
 == Harakteristik ==
 * Likutim: 5,2 litrad (600 hebonväged) V10
+* Veduz: 950 kg
+* Aig sijaspäi 100 km/č-pigudehesai: 2,4 sekundad.
+* Kaikiš lujemb piguz: 350 km/čas.
 
 == Homaičendad ==
 <references/>
