--- a/Lamborghini_Egoista.mw
+++ b/Lamborghini_Egoista.mw
@@ -1,7 +1,9 @@
 [[Fail:Lamborghini Egoista right.jpg|thumb|right|250px|«Lamborghini Egoista» — oiktan polen nägu]]
-'''«Lamborghini Egoista»''' om [[Italii|italižen]] «[[Lamborghini]]»-kompanijan [[konceptavto|koncept]]/[[sportavto]] [[kupe (klass)|kupe]]-klassas, superkar.
+'''«Lamborghini Egoista»''' om [[Italii|italižen]] «[[Lamborghini]]»-kompanijan [[konceptavto|koncept]]/[[sportavto]] [[kupe (klass)|kupe]]-klassas, superkar. Täuzin funkcionirui avto om tehtud kompanijan vižkümnevoččele jubilejale.
 
-Projekt om ezitadud vl 2013<ref>[http://www.automoblog.net/2013/05/12/lamborghini-egoista/ Lamborghini Feeds Their Ego with the Egoista Concept / ''12. semendku 2013. Automoblog.net''.] {{ref-en}}</ref>. Üks'jäine egzemplär om pästtud vl 2014. Dizainer — Val'ter de Sil'va.
+Projekt om ezitadud vl 2013<ref>[http://www.automoblog.net/2013/05/12/lamborghini-egoista/ Lamborghini Feeds Their Ego with the Egoista Concept / ''12. semendku 2013. Automoblog.net''.] {{ref-en}}</ref>. Üks'jäine egzemplär om pästtud vl 2014. Dizainer — Val'ter de Sil'va. Üks'jäine ištim om avtos.
+
+Edelkävui: [[Lamborghini Gallardo]]. Jäl'ghetulii model' om [[Terzo Millennio]].
 
 == Harakteristik ==
 * Likutim: 5,2 litrad (600 hebonväged) V10
