--- a/Kuril'sk.mw
+++ b/Kuril'sk.mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 1,607
  | Voz' = 2018
  | Pind = 1
- | Fail =
+ | Fail = Kurilsk.jpg
  | Pämez' = Vadim Rokotov<br />(sügüz'ku 2017—,<br />''velgusentäutai'')
  | Telefonkod = +7-42454-xx-xxx
  | Avtokod = 65
@@ -26,6 +26,18 @@ Lidn sijadase Kurilk-jogensun randal ({{lang-ru|Курилка}}, 22 km pitte), 
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 2 070 ristitud, lidnümbrikon nelländez. Kaikiš suremb lidnan ristitišt oli 2 699 eläjad vl 1989.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Итуруп9.jpg|Administrativine sauvuz (1981)
+Kurilsk square.jpg|Skver lidnas (2019)
+Iturup Kurilsk Vannochki.jpg|Termaližveziden tervehtai «Vannočki»-kompleks (''Vannuded'') vl 2019
+Рейд города Курильска.jpg|Lidnan reid (1990)
+Iturup Airport Yasnyi.jpg|«Iturup / Jasnii»-lendimport läz lidnad vl 2019
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://курильск-адм.рф/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''курильск-адм.рф'').] {{ref-ru}}
