--- a/Uglegorsk_(Sahalinan_agj).mw
+++ b/Uglegorsk_(Sahalinan_agj).mw
@@ -8,14 +8,14 @@
  | Eläjiden lugu = 8,860
  | Voz' = 2018
  | Pind =
- | Fail =
- | Pämez' = Sergei Doroščuk<br />(sulaku 2016—.<br />''velgusentäutai'')
+ | Fail = Г. Углегорск, о. Сахалин - panoramio.jpg
+ | Pämez' = Sergei Doroščuk<br />(sulaku 2016—,<br />''velgusentäutai'')
  | Telefonkod = +7-42432-xx-xxx
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
 {{Znamoičendad|Uglegorsk}}
-'''Uglegorsk''' ({{lang-ru|Углегорск}}, {{lang-ja|ウグレゴルスク}} ''Uguregorusku'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren päivlaskmas. Se om [[Uglegorskan lidnümbrik]]on administrativine keskuz (edel 2017 vot — rajonan).
+'''Uglegorsk''' ({{lang-ru|Углегорск}}, {{lang-ja|ウグレゴルスク}} ''Uguregorusku'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren päivlaskmas. Se om [[Uglegorskan lidnümbrik]]on administrativine keskuz (edel 2017. vot — rajonan).
 
 == Istorii ==
 Eländpunktan aluz om pandud 20. voz'sadan augotišes. Vozil 1905−1945 oli [[Japonii|Japonijan]] palaks, nimitihe ''Esutoro-šičö'' ({{lang-ja|恵須取支庁}}). Saudud japonijalaižil cellülozbumagaine kombinat radoi sijaližel torhudel 1990-nzihe vozihesai. Anttihe lidnan statusad vl 1946.
@@ -31,6 +31,15 @@ Lühüd Tuhlänk-jogi om lidnan pohjoižröunaks, sauvomižen jäl'ghe ''Masurao
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 381 ristitud, lidnümbrikon nell' seičemendest. Kaikiš suremb lidnan ristitišt oli 18 800 eläjad vl 1935 i 19 100 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Vladimiran jumalaižen pühäpert' om saudud vl 2014. [[Sintoizm]]an kahten pühäpertin jändused oma kaičenus.
 
 Lähembaine professionaližen opendusen aluzkund om Sahalinan kaivuztehnikum, sijadase [[Šahtörsk (Sahalinan agj)|lidnanvuiččes Šahtörsk-žilos]] 10 km pohjoižhe, mugažo regionaline lendimport.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Храм Владимирской иконы Божией Матери в Углегорске в 2016 году.jpg|Jumalanmaman Vladimiran jumalaižen pühäpert', vn 2016 nägu
+Port Uglegorsk - panoramio.jpg|Lidnan meriport vl 2008
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://uglegorsk.admsakhalin.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''uglegorsk.admsakhalin.ru'').] {{ref-ru}}
