--- a/Tomari_(Venäma).mw
+++ b/Tomari_(Venäma).mw
@@ -8,13 +8,14 @@
  | Eläjiden lugu = 3,810
  | Voz' = 2018
  | Pind =
- | Fail =
+ | Fail = РЖД Томари 2016-06.jpg
  | Pämez' = Aleksandr Kobelev<br />(kül'mku 2016—)
  | Telefonkod = +7-42446-xx-xxx
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Tomari''' ({{lang-ru|Томари}}, {{lang-ja|トマリ}} ''Tomari'', edel 1946 vot — {{lang-ja|泊居}} ''Tomarioru'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om [[Tomarin lidnümbrik]]on administrativine keskuz (edel 2006 vot — rajonan).
+[[Fail:РЖД Томари 2016-06 3.jpg|thumb|left|250px|Tomari-päraudtestancijan sauvuz vl 2016]]
+'''Tomari''' ({{lang-ru|Томари}}, {{lang-ja|トマリ}} ''Tomari'', edel 1946. vot — {{lang-ja|泊居}} ''Tomarioru'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om [[Tomarin lidnümbrik]]on administrativine keskuz (edel 2006. vot — rajonan).
 
 == Istorii ==
 Eländpunktan aluz om pandud [[Venäman imperii|Venäman imperijha]] kuti ''Tomarioru'' vl 1870, nimituz libub [[ainan kel'|ainan kelespäi]]. Vozil 1905−1945 oli [[Japonii|Japonijan]] palaks. Japonijalaižed sauvoiba cellülozbumagašt tegint i kaivusid, tegim radoi satusekahas 1990-nzihe vozihesai. Anttihe lidnan statusad vl 1946 i kebnetihe nimed venäkel'žen ristitišton täht.
@@ -26,6 +27,9 @@ Lidn sijadase Tomarink-jogensun randoil ({{lang-ru|Томаринка}}, 41 km p
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 4 541 ristitud, lidnümbrikon pol'. Kaikiš suremb lidnan ristitišt oli 8 865 eläjad vl 1935, 9 909 eläjad vl 1959 i 8 121 eläjad vl 1989. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Sündun Tozimel'žen Ristan Zdvižen'jan uz' puine pühäpert' om saudud vll 2004−2006, mugažo [[sintoizm]]an pühäpertin kompleksan jändused oma kaičenus sambnuden vulkanan päl.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.adm-tomari.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''adm-tomari.ru'').] {{ref-ru}}
