Replacing Blason_ville_it_Padoue.svg with [[File:CoA_Padova.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: better SVG).

--- a/Padui.mw
+++ b/Padui.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Padui<br />Padova
- | Lidnanznam = Blason ville it Padoue.svg
+ | Lidnanznam = CoA Padova.svg
  | Flag = 
  | Lidnanznam text = Padujan lidnanznam
  | Flag text = Padujan flag
