--- a/Karambol.mw
+++ b/Karambol.mw
@@ -1,3 +1,22 @@
+{{Taxobox
+ | name         = Karambol
+ | image title  = Karambol
+ | image file   = 
+ | image descr  = Karambol
+ | regnum       = Kazmused
+ | divisio      = [[Änikkazmused]] (''Magnoliophyta'')
+ | classis      = [[Kaksidülehtesižed]] (''Dicotyledones'')
+ | ordo         = [[Uniheinänikoižed]] (''Caryophyllales'')
+ | familia      = ''[[Oxalidaceae]]''
+ | genus        = ''[[Averrhoa]]''
+ | species      = '''Karambol'''
+ | latin        = {{btname|Averrhoa carambola |[[Linnei Karl|L.]], [[nom. cons.]]}}
+ | wikispecies  = Averrhoa carambola
+ | commons      = Category:Averrhoa carambola
+ | itis         = 504901
+ | ncbi         = 41241
+ | range map    =
+}}
 [[Fail:Belimbing.jpg|thumb|right|250px|Karambolan plodud]]
 '''Karambol''' ({{lang-la|Averrhoa carambola}}) om tropine [[pu]] ''[[Oxalidaceae]]''-sugukundaspäi.
 
