--- a/Karambol.mw
+++ b/Karambol.mw
@@ -1,8 +1,8 @@
 {{Taxobox
  | name         = Karambol
  | image title  = Karambol
- | image file   = 
- | image descr  = Karambol
+ | image file   = Hoa khế.JPG
+ | image descr  = Karambolan änikuz da lehtesed barboil
  | regnum       = Kazmused
  | divisio      = [[Änikkazmused]] (''Magnoliophyta'')
  | classis      = [[Kaksidülehtesižed]] (''Dicotyledones'')
@@ -13,7 +13,7 @@
  | latin        = {{btname|Averrhoa carambola |[[Linnei Karl|L.]], [[nom. cons.]]}}
  | wikispecies  = Averrhoa carambola
  | commons      = Category:Averrhoa carambola
- | itis         = 504901
+ | itis         = 506371
  | ncbi         = 41241
  | range map    =
 }}
