*Empty MediaWiki Message*

--- a/Karambol.mw
+++ b/Karambol.mw
@@ -6,15 +6,15 @@
  | regnum       = Kazmused
  | divisio      = [[Änikkazmused]] (''Magnoliophyta'')
  | classis      = [[Kaksidülehtesižed]] (''Dicotyledones'')
- | ordo         = [[Uniheinänikoižed]] (''Caryophyllales'')
+ | ordo         = ''[[Oxalidales]]''
  | familia      = ''[[Oxalidaceae]]''
  | genus        = ''[[Averrhoa]]''
  | species      = '''Karambol'''
- | latin        = {{btname|Averrhoa carambola |[[Linnei Karl|L.]], [[nom. cons.]]}}
+ | latin        = {{btname|Averrhoa carambola |[[Linnei Karl|L.]], 1753}}
  | wikispecies  = Averrhoa carambola
  | commons      = Category:Averrhoa carambola
  | itis         = 506371
- | ncbi         = 41241
+ | ncbi         = 28974
  | range map    =
 }}
 [[Fail:Belimbing.jpg|thumb|right|250px|Karambolan plodud]]
