--- a/Karambol.mw
+++ b/Karambol.mw
@@ -20,7 +20,7 @@
 [[Fail:Belimbing.jpg|thumb|right|250px|Karambolan plodud]]
 '''Karambol''' ({{lang-la|Averrhoa carambola}}) om tropine [[pu]] ''[[Oxalidaceae]]''-sugukundaspäi.
 
-Nepsudennavedii pu. Kazvab londuses [[Azii|Azijan]] suves da longibokas, om akklimatiziruidud tropižiš maiš mirudme.
+Nepsudennavedii pu. Kazvab londuses [[Azii|Azijan]] suves da longibokas, om akklimatiziruidud tropižiš maiš mirudme. Elonform om penzaz vai madal pu, 5..12 m kortte. Änikoičeb vodes läbi tropikoiden arvoimižiš.
 
 Plodud oma södabad, muigedmagedad vai magedad. Küpsnedas semendkus-elokus. Plod kaičese hüvin vilugoitimes koumhe nedalihesai. Voib kazvatada honuzkazmuseks.
 
