--- a/Jeremian_kirj.mw
+++ b/Jeremian_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Aleppo-HighRes2-Neviim6-Jeremiah (page 1 crop).jpg|thumb|right|250px|Jeremijan kirjan citat [[Aleppon kodeks]]as, 10. voz'sada]]
 '''Jeremian kirj''' ({{lang-he|יִרְמְיָהוּ}} ''Irmija'', {{lang-el|Ιερεμίας}} ''Ieremias'', {{lang-la|Ieremiae}}, {{lang-ru|Книга Иеремии}}) om evrejan [[Tanah]]-biblijan kirj Neviim-jagusespäi i [[hristanuskond]]an 24. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Kirj om sätud Judejas i Egiptas vll 626−562 EME, kogoneb 52 jagusespäi. Jagused 1−34 oma kirjutadud [[Varuh (endustai)|Varuh]]-endustajal [[Jeremia (endustai)|Jeremia]]-endustajan sanoišpäi. Jagused 35−51 oma kirjutadud Varuhal mugažo, no Jeremian melen mödhe, eile sanoišpäi. Jäl'gmäižen 52. jagusen tegii om Varuh ičeksaz ezimeletaden.
