--- a/Jeremian_voikud.mw
+++ b/Jeremian_voikud.mw
@@ -1,3 +1,4 @@
+[[Fail:Schnorr von Carolsfeld Bibel in Bildern 1860 141.png|thumb|right|250px|''Jeremian voikud'', saksalaižen [[Julius Šnorr fon Karol'sfel'd]]-pirdajan gravür vn 1860 Biblijan täht]]
 '''Jeremian voikud''' ({{lang-he|אֵיכָה}} ''Eiha'' kirjan ezmäižen sanan mödhe, {{lang-el|Θρῆνοι}} ''Trenoi'' vai ''Frinoi'', {{lang-la|Lamentationes}}, {{lang-ru|Плач Иеремии}}) om evrejan [[Tanah]]-biblijan kuden' kirj Ktuvim-jagusespäi i hristanuskondan 25. [[Vanh Zavet|Vanhan Zavetan]] kirj.
 
 Lugetas, miše [[Jeremia (endustai)|Jeremia]]-endustai om kirjan sädai, no se ei ole todištadud. Kirj om kirjutadud läz [[Jerusalim]]-lidnad sen murendusen jäl'ghe Vavilonan [[Navuhodonosor]]-caril vl 586 EME. Original om sätud evrejan kelel.
