--- a/Daniilan_kirj.mw
+++ b/Daniilan_kirj.mw
@@ -1,8 +1,9 @@
+[[Fail:Daniellion.jpg|thumb|right|250px|''Daniilan vastuz carile'' vai ''Daniil levoiden rovas'', britanižen [[Braiton Rivjer]]-voimujupirdajan vn 1890 kuva, reprint vn 1892 kirjpästandas]]
 '''Daniilan kirj''' ({{lang-he|דָּנִיֵּאל}} ''Daniel' '', {{lang-el|Δανιὴλ}} ''Daniil'', {{lang-la|Danielis}}, {{lang-ru|Книга пророка Даниила}}) om evrejan [[Tanah]]-biblijan 9. kirj Ktuvim-jagusespäi i [[hristanuskond]]an [[Vanh Zavet|Vanhan Zavetan]] 27. kirj.
 
 Kirj om sätud [[Daniil (endustai)|Daniil]]-endustajal (eli 7.-6. voz'sadoil EME) vai möhemba, 2. voz'sadal EME. Original om kirjutadud evrejan i [[aramejan kel'|aramejan]] kelil, kanonitomad ližadused — [[amuižgrekan kel'|amuižgrekan]] kelel.
 
-Daniil-endustajan kirj jagase kahteks palaks: istorine (1.-6. jagused) i endustused (6.-12. jagused). Koumanz' pala (13. i 14. jagused) ei mülü kanonha. Ezmäine pala starinoičeb endustajan elos da Vavilonan i Midiiž-Persijan car'kundoiden aigtegoiš, kudambihe endustai sebranikoidenke ühtni. Kahtendes palas om anttud Daniilale nägudesid Judejan i paginikoiden car'kundoiden ozahudes, ned endustused valatoitiba evrejalaižiden istorijha.
+Daniil-endustajan kirj jagase kahteks palaks: istorine (1.-6. jagused) i endustused (6.-12. jagused). Koumanz' pala (13. i 14. jagused) ei mülü kanonha. Ezmäine pala starinoičeb endustajan elos da Vavilonan i Midiiž-Persijan car'kundoiden aigtegoiš, kudambihe endustai sebranikoidenke ühtni. Kahtendes palas om anttud Daniilale nägudesid [[Judei|Judejan]] i paginikoiden car'kundoiden ozahudes, ned endustused valatoitiba evrejalaižiden istorijha.
 
 == Homaičendad ==
 <references />
