--- a/Osijan_kirj.mw
+++ b/Osijan_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Hosea and Gomer.jpg|thumb|right|250px|''Osija i [[Gomer]]'', vn 1372 Biblijan francižen «Bible Historiale»-kändusen lehtpol'. Kuvan tegii om tundmatoi.]]
 '''Osijan kirj''' ({{lang-he|הוֹשֵׁעַ}} ''Hošea'', {{lang-el|Ὡσηὲ}} ''Osie'', {{lang-la|Osee}}, {{lang-ru|Книга пророка Осии}}) om evrejan [[Tanah]]-biblijan kirj Neviim-jagusespäi i [[hristanuskond]]an [[Vanh Zavet|Vanhan Zavetan]] 28. kirj.
 
 Original om sätud evrejan kelel läz 750. vot EME, tegii om [[Osija]]-endustai. Kirjutandan sija om [[Samarii (lidn)|Samarii]]. Kirj kogoneb 14 jagusespäi.
