--- a/Joilan_kirj.mw
+++ b/Joilan_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Joel-prophet.jpg|thumb|right|250px|''Joil-endustai'', [[Kiži]]n jumalankodin jumalaine, 18. voz'sadan ezmäine nelländez]]
 '''Joilan kirj''' ({{lang-he|יוֹאֵל}} ''Joel' '', {{lang-el|Ἰωὴλ}} ''Ioel'', {{lang-la|Ioel}}, {{lang-ru|Книга пророка Иоиля}}) om evrejan [[Tanah]]-biblijan kirj Neviim-jagusespäi i [[hristanuskond]]an [[Vanh Zavet|Vanhan Zavetan]] 29. kirj.
 
 Original om sätud evrejan kelel. Hristanuskondan kirj kogoneb koumes jagusespäi, evrejan biblijas nelläspäi, evrejan originalan kahtenz' i koumanz' jagused oma ühtenzoittud Vanhas Zavetas. [[Joil' (endustai)|Joil']]-endustai tegi kirjad. Sen datiruind om jüged azj tarkkohtiden vajaguden tagut, kirjutandan aig voib olda 9.-5. voz'sadad EME. Endustuz om sätud Judejas vai tarkoiktemb Jerusalimas ezimeletaden, paksus mainitadud niiden nimitusiden tagut.
