--- a/Jonan_kirj.mw
+++ b/Jonan_kirj.mw
@@ -1,3 +1,4 @@
+[[Fail:Kennicott Bible 305r.l.jpg|thumb|right|250px|''Jona suren kalan südäimes koume päiväd da koume öd'', 1476]]
 '''Jonan kirj''' ({{lang-he|יוֹנָה}} ''Jona'', {{lang-el|Ἰωνᾶς}} ''Ionas'', {{lang-la|Ionae}}, {{lang-ru|Книга пророка Ионы}}) om evrejan [[Tanah]]-biblijan kirj Neviim-jagusespäi i [[hristanuskond]]an [[Vanh Zavet|Vanhan Zavetan]] 32. kirj. Se om [[Jona (endustai)|Jona]]-endustajan elon polhe päpaloin, endustused ottas kirjan vaiše pen't palad.
 
 Original om sätud evrejan kelel, aigemba mi 430. vodel EME. Kirj kogoneb nelläs jagusespäi.
