*Empty MediaWiki Message*

--- a/Kuril'sk.mw
+++ b/Kuril'sk.mw
@@ -14,7 +14,7 @@
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Kuril'sk''' ({{lang-ru|Курильск}}, {{lang-ja|クリリスク}} ''Kuririsku'', edel 1947 vot — ''Sän-külä'', {{lang-ja|紗那村}} ''Säna-mura'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Iturup]]-saren keskuzpalan lodehes. Se om [[Kuril'skan lidnümbrik]]on administrativine keskuz (edel 2005 vot — rajonan).
+'''Kuril'sk''' ({{lang-ru|Курильск}}, {{lang-ja|クリリスク}} ''Kuririsku'', edel 1947. vot — ''Sän-külä'', {{lang-ja|紗那村}} ''Säna-mura'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Iturup]]-saren keskuzpalan lodehes. Se om [[Kuril'skan lidnümbrik]]on administrativine keskuz (edel 2005. vot — rajonan).
 
 == Istorii ==
 [[Ainalaižed|Ainalaižiden]] amuine ''Sän-eländpunkt'' om olmas 2. voz'tuhaspäi edel m.e.. Vll 1855−1945 oli [[Japonii|Japonijan]] oficialižeks palaks. [[Toine mail'man soda|Suren sodan]] aigan Rusked Armii anasti lidnad vl 1945. Sai lidnan statusad vl 1947, nimitihe [[Kurilan sared|Kurilan sariden]] mödhe.
