--- a/Makarov_(lidn).mw
+++ b/Makarov_(lidn).mw
@@ -8,13 +8,14 @@
  | Eläjiden lugu = 6,567
  | Voz' = 2018
  | Pind =
- | Fail =
+ | Fail = РЖД Макаров 2016-06.jpg
  | Pämez' = Andrei Kraskovskii<br />(reduku 2016—)
  | Telefonkod = +7-42443-xx-xxx
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Makarov''' ({{lang-ru|Макаров}}, {{lang-ja|マカロフ}} ''Makarofu'', edel 1946 vot — {{lang-ja|知取}} ''Sirutoru / Siritoru'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren keskuzpalan suves. Se om Makarovan lidnümbrikon administrativine keskuz (edel 2006 vot — rajonan).
+[[Fail:Макаров (станция).jpg|thumb|left|250px|Makarov-päraudtestancijan sauvuz vl 2016]]
+'''Makarov''' ({{lang-ru|Макаров}}, {{lang-ja|マカロフ}} ''Makarofu'', edel 1946. vot — {{lang-ja|知取}} ''Sirutoru / Siritoru'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren keskuzpalan suves. Se om Makarovan lidnümbrikon administrativine keskuz (edel 2006. vot — rajonan).
 
 == Istorii ==
 Eländpunktan aluz om pandud [[Venäman imperii|Venäman imperijha]] kuti ''Selütor'' ({{lang-ru|Селютора}}, nimi ainan augotižlibundanke) vl 1892. Šingotihe kükstud mehil «[[Korsakov (lidn)|Korsakovskii]] — [[Aleksandrovsk Sahalinal]]»-počttraktal. Vozil 1905−1945 oli [[Japonii|Japonijan]] palaks. Japonijalaižed sauvoiba cellülozbumagašt tegint i kaivusid, ned radoiba satusekahas 1990-nzihe vozihesai. Udesnimitihe Stepan Makarov-admiralan muštoks.
@@ -28,6 +29,9 @@ Lidn sijadase Tünen valdmeren Ohotskan meren suvipäivlaskmaižel randal (Tirpa
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 6 705 ristitud, lidnümbrikon — 8 579 ristitud. Kaikiš suremb lidnan ristitišt oli 15 735 eläjad vl 1935 i 13 919 eläjad vl 1959. Vl 2018 kaik 7 989 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Donan Jumalanmaman jumalaižen uz' puine pühäpert' om saudud vll 2005−2008.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://admmakarov.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''admmakarov.ru'').] {{ref-ru}}
