--- a/Nevel'sk.mw
+++ b/Nevel'sk.mw
@@ -14,7 +14,7 @@
  | Avtokod = 65
  | Aigvö = [[UTC]]+11 (MSK+8)
 }}
-'''Nevel'sk''' ({{lang-ru|Невельск}}, {{lang-ja|ネベリスク}} ''Neberisku'', edel 1946 vot — {{lang-ja|本斗}} ''Honto'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om [[Nevel'skan lidnümbrik]]on administrativine keskuz (edel 2010 vot — rajonan).
+'''Nevel'sk''' ({{lang-ru|Невельск}}, {{lang-ja|ネベリスク}} ''Neberisku'', edel 1946. vot — {{lang-ja|本斗}} ''Honto'') om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren suves. Se om [[Nevel'skan lidnümbrik]]on administrativine keskuz (edel 2010. vot — rajonan).
 
 == Istorii ==
 [[Ainalaižed|Ainalaižiden]] ''Ponto-Kesi''- i ''Turumai''-küläd mainitadas vspäi 1789. Vll 1855−1875 kaks'jaine ohjanduz oli küliš — Venäman imperijan i Japonijan. Nügüdläižen eländpunktan aluz om pandud [[Japonii|Japonijha]] 20. voz'sadal lidnalaižes ''Honto-volostikš'' [[Holmsk|Maokan]] makundas. Vl 1920 raudte ühtenzoiti žilod Maokanke. Vhesai 1945 oli [[Japonii|Japonijan]] palaks, šingotihe kalankazvatusel, jädumatomal meriportal (vspäi 1927) i imperatorižel sodaškolal. Sai lidnan statusad vl 1946, nimitihe Gennadii Nevel'skoi-admiralan kanzannimen mödhe.
@@ -28,6 +28,15 @@ Meriport om saudud putkotadud gruntal. Jäl'gmäine luja manrehkaiduz oli vl 200
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 11 682 ristitud, lidnümbrikon kaks' koumandest. Kaikiš suremb lidnan ristitišt oli 24 800 eläjad vl 1992. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman Sündundpäivän puine pühäpert' om saudud vl 1998.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Памятник погибшим морякам.jpg|Muštnik Sevsk-, Sebež, Boksitogorsk- i Nahičevan'-laivoiden pölištunuzile (19.01.1965) radon aigan merimehile-kalanpüdajile
+РЖД Невельск 2016-06 5.jpg|Nevel'sk-raudtestancii vl 2016
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.adm-nevelsk.ru/ Lidnan da lidnümbrikon tobmuden aluzkundoiden oficialine sait (''adm-nevelsk.ru'').] {{ref-ru}}
