--- a/Oh_(lidn).mw
+++ b/Oh_(lidn).mw
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 20,715
  | Voz' = 2018
  | Pind = 20.98
- | Fail = Okha5.jpg
+ | Fail = Okha city.JPG
  | Pämez' = Sergei Gusev<br />(keväz'ku 2017—)
  | Telefonkod = +7-42437-xx-xxx
  | Avtokod = 65
@@ -17,7 +17,7 @@
 '''Oh''' ({{lang-ru|Оха}}) om [[Venäma]]n lidn [[Sahalinan agj]]an [[Sahalin]]-saren pohjoižes. Se om agjan nellänz' lidn eläjiden lugun mödhe, Ohan lidnümbrikon administrativine keskuz.
 
 == Istorii ==
-Vl 1880 pen' ''Ohe-žilo'' ({{lang-ru|Охэ}}) oli olmas [[kivivoi]]n pindlöudmižsijanno. Ectihe enamba kivivoid, no satusetomašti, i tacihe žilod. Vl 1910 «Zotovan jäl'gnikad da kompanii» löuzi ezmäšt surt kivivoid, no se jäi kävutandata. Vl 1920−1925 [[Japonii]] okkupirui Sahalinad, i vl 1921 saihe ezmäšt kivivoid surel mülündal. Nügüdläižen eländpunktan aluz om pandud vl 1925, nimitihe jogen mödhe. Om lidnan statusanke vspäi 1938.
+Vl 1880 pen' ''Ohe-žilo'' ({{lang-ru|Охэ}}) oli olmas [[kivivoi]]n pindlöudmižsijanno. Ectihe enamba kivivoid, no satusetomašti, i tacihe žilod. Vl 1910 «Zotovan jäl'gnikad da kompanii» löuzi ezmäšt surt kivivoid, no se jäi kävutandata. Vll 1920−1925 [[Japonii]] okkupirui Sahalinad, i vl 1921 saihe ezmäšt kivivoid surel mülündal. Nügüdläižen eländpunktan aluz om pandud vl 1925, nimitihe jogen mödhe. Om lidnan statusanke vspäi 1938.
 
 Vl 1942 saudihe «Oh — [[Komsomol'sk Amural]]»-kivivoinveimen. Vn 1995 (28. semendku, 7,2-ballaine) Neftegorskan manrehkaiduz mureni Ohan-ki sauvusid paloin. Vspäi 2005 ühtištuihe Ohan rajonad lidnanke, kätihe lidnümbrikoks. Om severz'-se vahtkundan žiloid lidnas ümbri.
 
@@ -28,12 +28,24 @@ Lidn sijadase Ohotskan meren Urkt-lahten-järven randal, 30 m ü.m.t. keskmäiž
 
 Klimat om [[ven vö|ven]] meren, om tazostadud Edahaižen Pohjoižen rajonha vilun Päivnouzmaižsahalinan merijoksmusen tagut. Heinkun i elokun lämuz om +16,1..16,7 C°, vilukun i uhokun — −17,2..17,9 C°. Voden keskmäine lämuz om −0,2 C°.
 
-10 žilod mülüdas lidnümbrikho Ohan ližaks. 26 eländpunktad om likvidiruidud NSTÜ:n olendan jäl'ghe. Lidnümbrikon pind — 14 815,87 km².
+Kaik kümne žilod mülüdas lidnümbrikho Ohan ližaks. Ühthemänho 26 eländpunktad om likvidiruidud NSTÜ:n olendan jäl'ghe. Lidnümbrikon pind — 14 815,87 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 008 ristitud, lidnümbrikon — 25 855 ristitud. Kaikiš suremb lidnan ristitišt oli 37 000 eläjad vl 1992. Vl 2018 kaik 22 612 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen kivine jumalanpert' om saudud vll 1995−2001.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 23 008 ristitud, lidnümbrikon — 25 855 ristitud. Kaikiš suremb lidnan ristitišt oli 37 000 eläjad vl 1992. Vl 2018 kaik 22 612 ristitud elihe lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Sergii Radonežalaižen kivine jumalanpert' om saudud vll 1995−2001.
 
 Professionaližen opendusen aluzkundad: Sahalinan industrialine tehnikum i Sahalinan valdkundaližen universitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Okha2.jpg|Lidnümbrikon administracijan sauvuz (2018)
+Okha6.jpg|Ph. Sergii Radonežalaižen jumalanpert' (huralpäi) i muštnik Neftegorskan pölištunuzile eläjile (oiktalpäi), vn 2018 nägu
+Okha11.jpg|Kivivoinčibun model' irdal
+Okha10.jpg|Keskškol nomer viž vl 2018
+OkhaCity.png|Lebusija lidnan röunal (2013)
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.adm-okha.ru/ Lidnan da lidnümbrikon tobmuden oficialine sait (''adm-okha.ru'').] {{ref-ru}}
