--- a/Danaja_(Rembrandtan_kuva).mw
+++ b/Danaja_(Rembrandtan_kuva).mw
@@ -1,9 +1,13 @@
 [[Fail:Rembrandt Harmensz. van Rijn 026.jpg|thumb|right|250px|«Danaja»]]
-'''«Danaja»''' ([[1636]]−[[1647]]) om alamalaižen [[Rembrandt]]-pirdajan voikuva [[Ermitaž]]an kogodusespäi. Om pirtud amuižgrekan mifan motivoiden mödhe [[Danaja]]s, [[Persei]]n mamas. Rembrandt sädi kuvad ičeze kodin täht, kuvazi Danajan mel'kuvaks ezmäi ičeze akad, sid' sudaruškad.
+'''«Danaja»''' ([[1636]]−[[1647]]) om alamalaižen [[Rembrandt]]-pirdajan voikuva Piterin [[Ermitaž]]an kogodusespäi.
+
+Kuva om pirtud amuižgrekan mifan motivoiden mödhe [[Danaja]]s, [[Persei]]n mamas. Rembrandt sädi kuvad ičeze kodin täht, kuvazi Danajan mel'kuvaks ezmäi ičeze akad, hänen surman jäl'ghe — sudaruškad. Danajan mod ühtenzoitab molembiden naižiden pirdoid.
 
 Suruz — 185 sm × 203 sm.
 
-Vl 1985 kuvan nelländez oli muretud läžujal psihižikš vandalal. Restavracii vedihe 12 vot, nügüd'aigan kuva ozutase somustadud stöklan al.
+Kuva om osttud venämalaižel [[Jekaterina II]]-imperatornaižel Ermitažan täht vl 1772 francižen [[Kroza|Pjer Kroza]]-keradajan jäl'gnikoil.
+
+Vl 1985 voikuvan nelländez oli muretud läžujal psihižikš vandalal. Restavracii vedihe 12 vot, nügüd'aigan kuva ozutase somustadud stöklan al.
 
 == Homaičendad ==
 <references />
