--- a/Must_braunšvaigalaine.mw
+++ b/Must_braunšvaigalaine.mw
@@ -1,10 +1,11 @@
-[[Fail:John Everett Millais The Black Brunswicker.jpg|thumb|right|300px|"Must braunšvaigalaine"]]
-'''"Must braunšvaigalaine"''' ([[anglijan kel'|angl]].: ''The Black Brunswicker'') om [[Anglii|anglijalaižen]] [[Mille Džon|Džon Mille]]-pirdajan kuva.
+[[Fail:John Everett Millais The Black Brunswicker.jpg|thumb|right|300px|''Must braunšvaigalaine''-voikuva]]
+'''«Must braunšvaigalaine»''' ({{lang-en|The Black Brunswicker}}) om [[Sur'Britanii|britanižen]] (anglijalaižen) [[Mille Džon|Džon Mille]]-pirdajan kuva.
 
-Kuval om pirttud hüväšt'jätandan scen [[Braunšvaigan gerzogkund‎|braunšvaigalaižen]] saldatan [[Must korpus|Mustas korpusaspäi]] i hänen adivon keskes.
+Kuval hüväšt'jätandan scen om pirttud [[Braunšvaigan gerzogkund‎|braunšvaigalaižen]] saldatan [[Must korpus|Mustas korpusaspäi]] i hänen adivon keskes.
 
 Suruz — 104 sm × 68,5 sm.
 
-Modelin neiččen täht oli [[Perugini Keit|Keit Perugini]] — anglijalaine pirdai da [[Dikkens Čarl'z|Čarl'z Dikkensan]] tütär. Noren mehen model' oli tundmatoi saldat.
+Anglijalaine [[Perugini Keit|Keit Perugini]]-pirdai da [[Dikkens Čarl'z|Čarl'z Dikkensan]] tütär oli ottud modelikš neiččen täht. Tundmatoi saldat oli valitud noren mehen modelikš.
 
+{{stub}}
 [[Kategorii:Kuvad]]
