--- a/Must_braunšvaigalaine.mw
+++ b/Must_braunšvaigalaine.mw
@@ -1,11 +1,16 @@
 [[Fail:John Everett Millais The Black Brunswicker.jpg|thumb|right|300px|''Must braunšvaigalaine''-voikuva]]
-'''«Must braunšvaigalaine»''' ({{lang-en|The Black Brunswicker}}) om [[Sur'Britanii|britanižen]] (anglijalaižen) [[Mille Džon|Džon Mille]]-pirdajan kuva.
+'''«Must braunšvaigalaine»''' ({{lang-en|The Black Brunswicker}}) om [[Sur'Britanii|britanižen]] (anglijalaižen) [[Mille Džon|Džon Mille]]-pirdajan kuva Napoleonan sodoiden epizodanke.
 
-Kuval hüväšt'jätandan scen om pirttud [[Braunšvaigan gerzogkund‎|braunšvaigalaižen]] saldatan [[Must korpus|Mustas korpusaspäi]] i hänen adivon keskes.
+Kuval hüväšt'jätandan scen om pirttud [[Braunšvaigan gercogkund‎|braunšvaigalaižen]] gusaroficeran [[Must korpus|Mustas korpusaspäi]] i hänen adivon keskes.
 
 Suruz — 104 sm × 68,5 sm.
 
-Anglijalaine [[Perugini Keit|Keit Perugini]]-pirdai da [[Dikkens Čarl'z|Čarl'z Dikkensan]] tütär oli ottud modelikš neiččen täht. Tundmatoi saldat oli valitud noren mehen modelikš.
+Anglijalaine [[Perugini Keit|Keit Perugini]]-pirdai da [[Dikkens Čarl'z|Čarl'z Dikkensan]] tütär oli ottud modelikš neiččen täht. Tundmatoi sodamez' oli valitud noren mehen modelikš.
+
+Voikuva om pirttud vl 1860, sijadase [[Liverpul'|Liverpulin]] Čomamahtoižes galerejas ledi Leveran nimed. Paltnän huras alahaižes čogas om allekirjutadud: 18M60.
+
+== Homaičendad ==
+<references />
 
 {{stub}}
 [[Kategorii:Kuvad]]
