--- a/Braunšvaigan_gercogkund.mw
+++ b/Braunšvaigan_gercogkund.mw
@@ -12,10 +12,10 @@
  | Voz' = 1910
  | Pind = 3672.2
  | Kel' = [[germanijan kel'|germanijan]]
- | Ohjanduzform = monarhii
+ | Ohjanduzform = konstitucine monarhii
  | Pämehen titul = gercog
  | Jäl'gmäine pämez' = Ernst August (regent)
- | Dinastii = 
+ | Dinastii = Vel'fad (vanhemb jono)
  | Religii = [[hristanuskond]]
  | Valüt = 
  | Internet-domen = 
@@ -23,8 +23,9 @@
  | Aigvö = 
 }}
 '''Braunšvaigan gercogkund''' (mugažo '''Braunšveigan'''; {{lang-de|Herzogtum Braunschweig}}) oli [[Evrop]]an istorine valdkund, kudamb oli tulnu [[Germanijan imperii|Germanijan imperijha]] vl 1871.
+[[Fail:Herzogtum Braunschweig 1914.png|thumb|left|350px|Braunšvaigan gercogkund (bur) vl 1914]]
 
-[[Fail:Herzogtum Braunschweig 1914.png|thumb|left|350px|Braunšvaigan gercogkund (bur) vl 1914.]]
+Valdkund oli sätud vn 1814 Venan kongressan pätandan mödhe kahten ruhtinazkundan alusel: Braunšvaig-Lüneburg i Braunšvaig-Vol'fenbüttel'. Eläjiden uskond oli [[lüteranižuz]] tobjimalaz. Gercogkundan ižanduz oli šingotadud: sadunkazvatuz, rahvahanpramozlad, raudkivendon i sauvondmaterialiden samine änikoičiba.
 
 {{Commons|Category:Duchy of Brunswick}}
 
