--- a/Braunšvaigan_gercogkund.mw
+++ b/Braunšvaigan_gercogkund.mw
@@ -2,7 +2,7 @@
  | Nimi = Braunšvaigan gercogkund<br />Herzogtum Braunschweig
  | Tehtud = 1814
  | Hajenu = 1919
- | Valdkundnam = Wappen Deutsches Reich - Herzogtum Braunschweig (Grosses).png
+ | Valdkundnam = Coat of Arms of the Duchy of Brunswick.svg
  | Flag = Flagge Herzogtum Braunschweig.svg
  | Valdkundznam text = Braunšvaigan gercogkundan znam
  | Flag text = Braunšvaigan gercogkundan flag
@@ -15,11 +15,9 @@
  | Ohjanduzform = konstitucine monarhii
  | Pämehen titul = gercog
  | Jäl'gmäine pämez' = Ernst August (regent)
- | Dinastii = Vel'fad (vanhemb jono)
+ | Dinastii = [[Vel'fad]] (vanhemb jono)
  | Religii = [[hristanuskond]]
  | Valüt = 
- | Internet-domen = 
- | Telefonkod = 
  | Aigvö = 
 }}
 '''Braunšvaigan gercogkund''' (mugažo '''Braunšveigan'''; {{lang-de|Herzogtum Braunschweig}}) oli [[Evrop]]an istorine valdkund, kudamb oli tulnu [[Germanijan imperii|Germanijan imperijha]] vl 1871.
