--- a/Braunšvaigan_gercogkund.mw
+++ b/Braunšvaigan_gercogkund.mw
@@ -1,7 +1,7 @@
 {{Istorine valdkund
  | Nimi = Braunšvaigan gercogkund<br />Herzogtum Braunschweig
  | Tehtud = 1814
- | Hajenu = 1919
+ | Hajenu = 1918
  | Valdkundnam = Coat of Arms of the Duchy of Brunswick.svg
  | Flag = Flagge Herzogtum Braunschweig.svg
  | Valdkundznam text = Braunšvaigan gercogkundan znam
@@ -20,10 +20,22 @@
  | Valüt = 
  | Aigvö = 
 }}
-'''Braunšvaigan gercogkund''' (mugažo '''Braunšveigan'''; {{lang-de|Herzogtum Braunschweig}}) oli [[Evrop]]an istorine valdkund, kudamb oli tulnu [[Germanijan imperii|Germanijan imperijha]] vl 1871.
+'''Braunšvaigan gercogkund''' (mugažo '''Braunšveigan'''; {{lang-de|Herzogtum Braunschweig}}) oli [[Evrop]]an istorine valdkund, kudamb oli tulnu [[Germanijan imperii|Germanijan imperijha]] vl 1871. Oli olmas nügüdläižen [[Alasaksonii]]-federacijanman territorijal.
 [[Fail:Herzogtum Braunschweig 1914.png|thumb|left|350px|Braunšvaigan gercogkund (bur) vl 1914]]
 
-Valdkund oli sätud vn 1814 Venan kongressan pätandan mödhe kahten ruhtinazkundan alusel: Braunšvaig-Lüneburg i Braunšvaig-Vol'fenbüttel'. Eläjiden uskond oli [[lüteranižuz]] tobjimalaz. Gercogkundan ižanduz oli šingotadud: sadunkazvatuz, rahvahanpramozlad, raudkivendon i sauvondmaterialiden samine änikoičiba.
+Valdkund oli sätud vn 1814 Venan kongressan pätandan mödhe kahten ruhtinazkundan alusel: Braunšvaig-Lüneburg i Braunšvaig-Vol'fenbüttel'. Eläjiden uskond oli [[lüteranižuz]] tobjimalaz. Gercogkundan ižanduz oli šingotadud: sadunkazvatuz, rahvahanpramozlad, raudkivendon i sauvondmaterialiden samine änikoičiba. Vn 1918 kül'mkun revolücijan jäl'ghe [[Braunšvaigan joudjaline valdkund]] oli jäl'ghetulijaks.
+
+== Administrativine jagand ==
+Braunšvaigan territorii jagoihe kudeks rajonaks (''kreis''):
+* Blankenburg
+* Braunšvaig
+* Gandersheim
+* Hel'mštedt
+* Hol'cminden
+* Vol'fenbüttel'
+
+== Homaičendad ==
+<references />
 
 {{Commons|Category:Duchy of Brunswick}}
 
