--- a/Braunšvaigan_gercogkund.mw
+++ b/Braunšvaigan_gercogkund.mw
@@ -1,6 +1,6 @@
 {{Istorine valdkund
  | Nimi = Braunšvaigan gercogkund<br />Herzogtum Braunschweig
- | Tehtud = 1814
+ | Tehtud = 1815
  | Hajenu = 1918
  | Valdkundnam = Coat of Arms of the Duchy of Brunswick.svg
  | Flag = Flagge Herzogtum Braunschweig.svg
@@ -23,7 +23,7 @@
 '''Braunšvaigan gercogkund''' (mugažo '''Braunšveigan'''; {{lang-de|Herzogtum Braunschweig}}) oli [[Evrop]]an istorine valdkund, kudamb oli tulnu [[Germanijan imperii|Germanijan imperijha]] vl 1871. Oli olmas nügüdläižen [[Alasaksonii]]-federacijanman territorijal.
 [[Fail:Herzogtum Braunschweig 1914.png|thumb|left|350px|Braunšvaigan gercogkund (bur) vl 1914]]
 
-Valdkund oli sätud vn 1814 Venan kongressan pätandan mödhe kahten ruhtinazkundan alusel: Braunšvaig-Lüneburg i Braunšvaig-Vol'fenbüttel'. Eläjiden uskond oli [[lüteranižuz]] tobjimalaz. Gercogkundan ižanduz oli šingotadud: sadunkazvatuz, rahvahanpramozlad, raudkivendon i sauvondmaterialiden samine änikoičiba. Vn 1918 kül'mkun revolücijan jäl'ghe [[Braunšvaigan joudjaline valdkund]] oli jäl'ghetulijaks.
+Valdkund oli sätud vl 1815 Venan kongressan pätandan mödhe kahten ruhtinazkundan alusel: Braunšvaig-Lüneburg i Braunšvaig-Vol'fenbüttel'. Eläjiden uskond oli [[lüteranižuz]] tobjimalaz. Gercogkundan ižanduz oli šingotadud: sadunkazvatuz, rahvahanpramozlad, raudkivendon i sauvondmaterialiden samine änikoičiba. Vn 1918 kül'mkun revolücijan jäl'ghe [[Braunšvaigan joudjaline valdkund]] oli jäl'ghetulijaks.
 
 == Administrativine jagand ==
 Braunšvaigan territorii jagoihe kudeks rajonaks (''kreis''):
@@ -42,3 +42,4 @@ Braunšvaigan territorii jagoihe kudeks rajonaks (''kreis''):
 {{stub}}
 [[Kategorii:Germanijan imperii]]
 [[Kategorii:Evropan istorižed valdkundad]]
+[[Kategorii:Alasaksonii]]
