([[c:GR|GR]])  [[File:Drapeaumulhouse.png]] → [[File:DrapeauMulhouse.svg]]

--- a/Müluz.mw
+++ b/Müluz.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Müluz<br />Mulhouse
  | Lidnanznam = Blason Mulhouse.svg
- | Flag = Drapeaumulhouse.png
+ | Flag = DrapeauMulhouse.svg
  | Lidnanznam text = Müluzan lidnanznam
  | Flag text = Müluzan flag
  | Valdkund = Francii
