([[c:GR|GR]])  [[File:Flag of Aprelevka (Moscow oblast).png]] → [[File:Flag of Aprelevka.svg]]

--- a/Aprelevk.mw
+++ b/Aprelevk.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Aprelevk<br />Апрелевка
  | Lidnanznam = Gerb Aprelevka.gif
- | Flag = Flag of Aprelevka (Moscow oblast).png
+ | Flag = Flag of Aprelevka.svg
  | Lidnanznam text = Aprelevkan lidnanznam
  | Flag text = Aprelevkan flag
  | Valdkund = Venäma
