([[c:GR|GR]])  [[File:Flag of Anadyr (Chukotka).png]] → [[File:Flag of Anadyr (Chukotka).svg]]

--- a/Anadir'.mw
+++ b/Anadir'.mw
@@ -1,7 +1,7 @@
 {{Eländpunkt
  | Nimi = Anadir'<br />Анадырь <small>(ven.)</small><br />Йъаайваам <small>(čukč.)</small>
  | Lidnanznam = Coat of Arms of Anadyr (Chukotka).png
- | Flag = Flag of Anadyr (Chukotka).png
+ | Flag = Flag of Anadyr (Chukotka).svg
  | Lidnanznam text = Anadirin lidnanznam
  | Flag text = Anadirin flag
  | Valdkund = Venäma
