([[c:GR|GR]])  [[File:Flag of Damascus.png]] → [[File:Flag of Damascus.svg]]

--- a/Damask.mw
+++ b/Damask.mw
@@ -2,7 +2,7 @@
 {{Eländpunkt
  | Nimi = Damask<br />دمشق<br />''<small>(Dimašk)</small>''
  | Lidnanznam = Damascus-Seal.jpg
- | Flag = Flag of Damascus.png
+ | Flag = Flag of Damascus.svg
  | Lidnanznam text = Damaskan lidnanznam
  | Flag text = Damaskan flag
  | Valdkund = Sirii
